--- a/maths spé/C10/cours.tex
+++ b/maths spé/C10/cours.tex
@@ -92,7 +92,7 @@
     \begin{enumeratebf}
         \item $\forall n \in \N,\, f_n \in \mc{C}^1(I,E)$.
         \item $(f_n)_{n \in \N}$ converge simplement vers une fonction $f \in \mc{CM}(I,E)$
-        \item $(f'_n)_{n \in \N}$ converge uniformément vers une même fonction $g$ sur tout segment inclus dans $I$.
+        \item $(f'_n)_{n \in \N}$ converge uniformément vers une fonction $g$ sur $I$.
     \end{enumeratebf}
     la fonction $f$ est de classe $\mc{C}^1(I,E)$ et $f' = g$.
 \end{theoreme}
@@ -101,9 +101,9 @@
     Soit $(f_n)_{n \in \N} \in \mc{F}(I,E)^\N$. Sous réserve des hypothèses suivantes,
     \begin{enumeratebf}
         \item $\forall n \in \N,\, f_n \in \mc{C}^k(I,E)$.
-        \item pour tout $i \in \intint{0}{k-1}$, la suite $(f_n^{(i)})_{n \in \N}$ converge simplement vers une fonction $f_i \in \mc{CM}(I,E)$
-        \item $(f_n^{(k)})_{n \in \N}$ converge uniformément vers une même fonction $g$ sur tout segment inclus dans $I$.
+        \item pour tout $i \in \intint{0}{k-1}$, la suite $(f_n^{(i)})_{n \in \N}$ converge simplement vers une fonction $h_i \in \mc{CM}(I,E)$
+        \item $(f_n^{(k)})_{n \in \N}$ converge uniformément vers une fonction $g$ sur $I$.
     \end{enumeratebf}
-    la fonction $f_0$ est de classe $\mc{C}^k(I,E)$ et $f^{(k)} = g$.
+    la fonction $h_0$ est de classe $\mc{C}^k(I,E)$ et $h_0^{(k)} = g$.
 \end{theoreme}
 \input{../../stock/pied.tex}
