--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -39,6 +39,7 @@
 \newcommand{\norme}[1]{\lVert#1\rVert}
 \newcommand{\normet}[1]{||| #1 |||}
 \renewcommand{\d}[1]{\,\mathrm{d}#1}
+\newcommand{\ssi}[0]{\Longleftrightarrow}
 \newcommand{\adh}[1]{\overline{#1}}
 \newcommand{\intint}[2]{\llbracket #1 ,\, #2 \rrbracket}
 \newcommand{\seg}[2]{[#1\, ; \, #2]}
