--- a/français/temps de l'innoncence 1/cours.tex
+++ b/français/temps de l'innoncence 1/cours.tex
@@ -76,4 +76,8 @@ L'oeuvre est à la jonction de deux styles littéraires~:
 L'oeuvre se mord la queue : elle s'achève où elle a commencé.\\
 Chapitres 1 à 3 : Newland Archer se rend à l'opéra pour écouter \textit{Faust}. Il arrive en retard (p.22)
 
+\subsection{}
+
+
+
 \end{document}
