--- a/maths spé/C10/cours.tex
+++ b/maths spé/C10/cours.tex
@@ -52,8 +52,8 @@
 \end{theoreme}
 
 \begin{theoreme}{10.57}{échange limite-intégrale}
-    Soit $(f_n)_{n \in \N} \in \mc{C}(\seg{a}{b},E)^\N$ convergeant uniformément vers $f$ sur $\seg{a}{b}$. Alors~:
-    $$\lim_{n \to +\infty} \int_{\seg{a}{b}} f_n = \int_{\seg{a}{b}} \lim_{n \to +\infty} f_n $$
+    Soit $(f_n)_{n \in \N} \in \mc{CM}(\seg{a}{b},E)^\N$ convergeant uniformément vers $f \in \mc{CM}(\seg{a}{b},E)$ sur $\seg{a}{b}$. Alors~:
+    $$\lim_{n \to +\infty} \int_{\seg{a}{b}} f_n = \int_{\seg{a}{b}} f $$
 \end{theoreme}
 
 \begin{theoreme}{10.62}{de convergence dominée pour une suite de fonctions}
