--- a/physique spé/Conduction électrique/cours.tex
+++ b/physique spé/Conduction électrique/cours.tex
@@ -10,5 +10,14 @@
     $$\div \vec{j} + \derivepar{}{\rho}{t} = 0$$
 \end{theoreme}
 
+\begin{definition}{}{conducteur Ohmique}
+    Un \notion{conducteur Ohmique} est un milieu dans lequel, en régime stationnaire la loi d'Ohm locale s'applique~:
+    $$\vec{j} = \gamma \vec{E}$$
+    $\gamma$ est la \notion{conductivité} du conducteur. Elle s'exprime en $\Omega^{-1} \cdot \mr{m}^{-1}$
+\end{definition}
 
+\begin{definition}{}{conducteur Ohmique parfait}
+    Un \notion{conducteur ohmique parfait} est un conducteur ohmique de conductivité infinie~:
+    $$\gamma \to +\infty$$
+\end{definition}
 \input{../../stock/pied.tex}
